--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "mockery/mockery"                                    : "^0.9",
         "php-di/invoker"                                     : "^1.3",
         "phpunit/phpunit"                                    : "~5.7",
-        "symfony/var-dumper"                                 : "^3.1"
+        "sandrokeil/interop-config"                          : "^2.0",
+        "symfony/var-dumper"                                 : "^3.1",
+        "viserio/config"                                     : "self.version"
     },
     "autoload": {
         "psr-4": {
@@ -45,8 +47,9 @@
         "psr/container-implementation"                       : "^1.0"
     },
     "suggest": {
-        "danielstjules/stringy"                              : "Required to use the Stringy Class in Str (^2.3)",
-        "php-di/invoker"                                     : "Required to use the Invoker Class (^1.3)",
+        "danielstjules/stringy"                              : "Required to use the Stringy Class in Str (^2.3).",
+        "php-di/invoker"                                     : "Required to use the Invoker Class (^1.3).",
+        "sandrokeil/interop-config"                          : "Required to use the AbstractConnectionManager and AbstractManager Class (^2.0).",
         "symfony/var-dumper"                                 : "Improves the Dumper::dump() (^3.1)."
     },
     "extra": {
