--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
         "narrowspark/testing-helper"                         : "^2.0",
         "mockery/mockery"                                    : "^0.9",
         "php-di/invoker"                                     : "^1.3",
-        "phpunit/phpunit"                                    : "~5.7",
-        "sandrokeil/interop-config"                          : "^2.0",
+        "phpunit/phpunit"                                    : "~5.7 || ^6.0",
         "symfony/var-dumper"                                 : "^3.1",
         "viserio/config"                                     : "self.version"
     },
@@ -49,7 +48,7 @@
     "suggest": {
         "danielstjules/stringy"                              : "Required to use the Stringy Class in Str (^2.3).",
         "php-di/invoker"                                     : "Required to use the Invoker Class (^1.3).",
-        "sandrokeil/interop-config"                          : "Required to use the AbstractConnectionManager and AbstractManager Class (^2.0).",
+        "viserio/options-resolver"                           : "Required to use the AbstractConnectionManager and AbstractManager Class (self.version).",
         "symfony/var-dumper"                                 : "Improves the Dumper::dump() (^3.1)."
     },
     "extra": {
