--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     "require-dev": {
         "danielstjules/stringy"                              : "^2.3",
         "narrowspark/testing-helper"                         : "^2.0",
-        "mockery/mockery"                                    : "^0.9",
+        "mockery/mockery"                                    : "^1.0",
         "php-di/invoker"                                     : "^1.3",
-        "phpunit/phpunit"                                    : "~5.7 || ^6.0",
+        "phpunit/phpunit"                                    : "^6.0",
         "symfony/var-dumper"                                 : "^3.1",
         "viserio/config"                                     : "self.version"
     },
