--- a/composer.json
+++ b/composer.json
@@ -18,44 +18,43 @@
         }
     ],
     "require": {
-        "php"                                                : "^7.1",
-        "viserio/contracts"                                  : "self.version"
+        "php"                                      : "^7.1",
+        "viserio/contracts"                        : "self.version"
     },
     "require-dev": {
-        "danielstjules/stringy"                              : "^3.0",
-        "narrowspark/testing-helper"                         : "^2.0",
-        "mockery/mockery"                                    : "^1.0",
-        "php-di/invoker"                                     : "^2.0",
-        "phpunit/phpunit"                                    : "^6.0",
-        "symfony/var-dumper"                                 : "^3.2",
-        "viserio/config"                                     : "self.version"
+        "danielstjules/stringy"                    : "^3.0",
+        "narrowspark/testing-helper"               : "^3.0",
+        "mockery/mockery"                          : "^1.0",
+        "php-di/invoker"                           : "^2.0",
+        "phpunit/phpunit"                          : "^6.0",
+        "symfony/var-dumper"                       : "^3.2",
+        "viserio/config"                           : "self.version"
     },
     "autoload": {
         "psr-4": {
-            "Viserio\\Support\\"                             : ""
+            "Viserio\\Component\\Support\\"        : ""
         },
-        "exclude-from-classmap"                              : ["/Tests/"]
+        "exclude-from-classmap"                    : ["/Tests/"]
     },
     "autoload-dev": {
         "psr-4": {
-            "Viserio\\Support\\Tests\\"                      : "Tests/"
+            "Viserio\\Component\\Support\\Tests\\" : "Tests/"
         }
     },
     "provide": {
-        "container-interop/container-interop-implementation" : "^1.1",
-        "psr/container-implementation"                       : "^1.0"
+        "psr/container-implementation"             : "^1.0"
     },
     "suggest": {
-        "danielstjules/stringy"                              : "Required to use the Stringy Class in Str (^3.0).",
-        "php-di/invoker"                                     : "Required to use the Invoker Class (^1.3).",
-        "viserio/options-resolver"                           : "Required to use the AbstractConnectionManager and AbstractManager Class (self.version).",
-        "symfony/var-dumper"                                 : "Improves the Dumper::dump() (^3.2)."
+        "danielstjules/stringy"                    : "Required to use the Stringy Class in Str (^3.0).",
+        "php-di/invoker"                           : "Required to use the Invoker Class (^1.3).",
+        "viserio/options-resolver"                 : "Required to use the AbstractConnectionManager and AbstractManager Class (self.version).",
+        "symfony/var-dumper"                       : "Improves the Dumper::dump() (^3.2)."
     },
     "extra": {
         "branch-alias": {
-            "dev-master"                                     : "1.0-dev"
+            "dev-master"                           : "1.0-dev"
         }
     },
-    "minimum-stability"                                      : "dev",
-    "prefer-stable"                                          : true
+    "minimum-stability"                            : "dev",
+    "prefer-stable"                                : true
 }
