moving helpers.php to support | added dotenv to suggest

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,9 @@
         "viserio/config"                           : "self.version"
     },
     "autoload": {
+        "files": [
+            "helpers.php"
+        ],
         "psr-4": {
             "Viserio\\Component\\Support\\"        : ""
         },
