--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "require-dev": {
         "danielstjules/stringy"                    : "^3.0",
+        "mikey179/vfsStream"                       : "^1.6",
         "narrowspark/testing-helper"               : "^3.0",
         "mockery/mockery"                          : "^1.0",
         "php-di/invoker"                           : "^2.0",
@@ -49,7 +50,7 @@
         "psr/container-implementation"             : "^1.0"
     },
     "suggest": {
-        "danielstjules/stringy"                    : "Required to use the Stringy Class in Str (^3.0).",
+        "danielstjules/stringy"                    : "Required to use the full power of Str (^3.0).",
         "php-di/invoker"                           : "Required to use the Invoker Class (^1.3).",
         "viserio/options-resolver"                 : "Required to use the AbstractConnectionManager and AbstractManager Class (self.version).",
         "symfony/var-dumper"                       : "Improves the Dumper::dump() (~3.3)."
