--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "require-dev": {
         "danielstjules/stringy"                    : "^3.0",
+        "doctrine/inflector"                       : "~1.0",
         "mikey179/vfsStream"                       : "^1.6",
         "mockery/mockery"                          : "^0.9",
         "narrowspark/testing-helper"               : "^3.0",
@@ -51,9 +52,10 @@
     },
     "suggest": {
         "danielstjules/stringy"                    : "Required to use the full power of Str (^3.0).",
+        "doctrine/inflector"                       : "Required to use the Pluralizer, Str::plural and Str::singular (~1.0).",
         "php-di/invoker"                           : "Required to use the Invoker Class (^1.3).",
         "viserio/options-resolver"                 : "Required to use the AbstractConnectionManager and AbstractManager Class (self.version).",
-        "symfony/var-dumper"                       : "Improves the Dumper::dump() (~3.3)."
+        "symfony/var-dumper"                       : "Improves the Dumper::dump function (~3.3)."
     },
     "extra": {
         "branch-alias": {
