--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require-dev": {
         "danielstjules/stringy"                    : "^3.0",
-        "doctrine/inflector"                       : "~1.0",
+        "doctrine/inflector"                       : "~1.1",
         "mikey179/vfsStream"                       : "^1.6",
         "mockery/mockery"                          : "^0.9",
         "narrowspark/testing-helper"               : "^3.0",
@@ -52,7 +52,7 @@
     },
     "suggest": {
         "danielstjules/stringy"                    : "Required to use the full power of Str (^3.0).",
-        "doctrine/inflector"                       : "Required to use the Pluralizer, Str::plural and Str::singular (~1.0).",
+        "doctrine/inflector"                       : "Required to use the Pluralizer, Str::plural and Str::singular (^1.0).",
         "php-di/invoker"                           : "Required to use the Invoker Class (^1.3).",
         "viserio/options-resolver"                 : "Required to use the AbstractConnectionManager and AbstractManager Class (self.version).",
         "symfony/var-dumper"                       : "Improves the Dumper::dump function (~3.3)."
