remove support macro trait use spatie/macroable

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "php"                                      : "^7.2",
         "ext-mbstring"                             : "*",
+        "spatie/macroable"                         : "^1.0",
         "viserio/contracts"                        : "self.version"
     },
     "require-dev": {
