--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "narrowspark/testing-helper"               : "^4.0",
         "php-di/invoker"                           : "^2.0",
         "phpunit/phpunit"                          : "^6.0",
-        "symfony/var-dumper"                       : "~3.4 || ~4.0",
+        "symfony/var-dumper"                       : "~4.0",
         "viserio/config"                           : "self.version",
         "viserio/options-resolver"                 : "self.version"
     },
