--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
     },
     "suggest": {
         "danielstjules/stringy"                    : "Required to use the full power of Str (^3.0).",
-        "doctrine/inflector"                       : "Required to use the Pluralizer, Str::plural and Str::singular (^1.2).",
+        "doctrine/inflector"                       : "Required to use the Pluralizer, Str::plural and Str::singular (~1.2).",
         "php-di/invoker"                           : "Required to use the Invoker Class (^1.3).",
         "viserio/options-resolver"                 : "Required to use the AbstractConnectionManager and AbstractManager Class (self.version).",
         "symfony/var-dumper"                       : "Improves the Dumper::dump function (~3.4)."
