--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
     },
     "require-dev": {
         "danielstjules/stringy"                    : "^3.0",
-        "doctrine/inflector"                       : "~1.2",
+        "doctrine/inflector"                       : "^1.3",
         "mikey179/vfsStream"                       : "^1.6",
         "mockery/mockery"                          : "^1.0",
         "narrowspark/testing-helper"               : "^6.0",
         "php-di/invoker"                           : "^2.0",
         "phpunit/phpunit"                          : "^7.0",
-        "symfony/var-dumper"                       : "~4.0",
+        "symfony/var-dumper"                       : "^4.0.6",
         "viserio/config"                           : "self.version",
         "viserio/options-resolver"                 : "self.version"
     },
@@ -54,10 +54,10 @@
     },
     "suggest": {
         "danielstjules/stringy"                    : "Required to use the full power of Str (^3.0).",
-        "doctrine/inflector"                       : "Required to use the Pluralizer, Str::plural and Str::singular (~1.2).",
+        "doctrine/inflector"                       : "Required to use the Pluralizer, Str::plural and Str::singular (^1.3).",
         "php-di/invoker"                           : "Required to use the Invoker Class (^1.3).",
         "viserio/options-resolver"                 : "Required to use the AbstractConnectionManager and AbstractManager Class (self.version).",
-        "symfony/var-dumper"                       : "Improves the Dumper::dump function (~3.4)."
+        "symfony/var-dumper"                       : "Improves the Dumper::dump function (^4.0.6)."
     },
     "extra": {
         "branch-alias": {
