--- a/composer.json
+++ b/composer.json
@@ -1,69 +1,80 @@
 {
-    "name"       : "viserio/support",
-    "type"       : "library",
+    "name": "viserio/support",
+    "type": "library",
     "description": "The Viserio Support package.",
-    "keywords"   : ["framework", "narrowspark", "support", "viserio", "env", "manager", "dumper", "invoker"],
-    "license"    : "MIT",
-    "homepage"   : "http://github.com/narrowspark/framework",
-    "support"    : {
-        "issues": "https://github.com/narrowspark/framework/issues",
-        "source": "https://github.com/narrowspark/framework"
-    },
-    "authors"    : [
+    "keywords": [
+        "framework",
+        "narrowspark",
+        "support",
+        "viserio",
+        "env",
+        "manager",
+        "dumper",
+        "invoker"
+    ],
+    "homepage": "http://github.com/narrowspark/framework",
+    "license": "MIT",
+    "authors": [
         {
-          "name"    : "Daniel Bannert",
-          "email"   : "d.bannert@anolilab.de",
-          "homepage": "http://www.anolilab.de",
-          "role"    : "Developer"
+            "name": "Daniel Bannert",
+            "email": "d.bannert@anolilab.de",
+            "homepage": "http://www.anolilab.de",
+            "role": "Developer"
         }
     ],
     "require": {
-        "php"                                      : "^7.2",
-        "ext-mbstring"                             : "*",
-        "spatie/macroable"                         : "^1.0",
-        "viserio/contract"                         : "self.version"
-    },
-    "require-dev": {
-        "danielstjules/stringy"                    : "^3.0",
-        "doctrine/inflector"                       : "^1.3",
-        "mikey179/vfsStream"                       : "^1.6",
-        "mockery/mockery"                          : "^1.0",
-        "narrowspark/testing-helper"               : "^6.0",
-        "php-di/invoker"                           : "^2.0",
-        "phpunit/phpunit"                          : "^7.0",
-        "symfony/var-dumper"                       : "^4.0.6",
-        "viserio/config"                           : "self.version",
-        "viserio/options-resolver"                 : "self.version"
-    },
-    "autoload": {
-        "files": [
-            "helpers.php"
-        ],
-        "psr-4": {
-            "Viserio\\Component\\Support\\"        : ""
-        },
-        "exclude-from-classmap"                    : ["/Tests/"]
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Viserio\\Component\\Support\\Tests\\" : "Tests/"
-        }
+        "php": "^7.2",
+        "ext-mbstring": "*",
+        "spatie/macroable": "^1.0",
+        "viserio/contract": "self.version"
     },
     "provide": {
-        "psr/container-implementation"             : "^1.0"
+        "psr/container-implementation": "^1.0"
+    },
+    "require-dev": {
+        "danielstjules/stringy": "^3.0",
+        "doctrine/inflector": "^1.3",
+        "mikey179/vfsStream": "^1.6",
+        "mockery/mockery": "^1.0",
+        "narrowspark/testing-helper": "^6.0",
+        "php-di/invoker": "^2.0",
+        "phpunit/phpunit": "^7.0",
+        "symfony/var-dumper": "^4.0.6",
+        "viserio/config": "self.version",
+        "viserio/options-resolver": "self.version"
     },
     "suggest": {
-        "danielstjules/stringy"                    : "Required to use the full power of Str (^3.0).",
-        "doctrine/inflector"                       : "Required to use the Pluralizer, Str::plural and Str::singular (^1.3).",
-        "php-di/invoker"                           : "Required to use the Invoker Class (^1.3).",
-        "viserio/options-resolver"                 : "Required to use the AbstractConnectionManager and AbstractManager Class (self.version).",
-        "symfony/var-dumper"                       : "Improves the Dumper::dump function (^4.0.6)."
+        "danielstjules/stringy": "Required to use the full power of Str (^3.0).",
+        "doctrine/inflector": "Required to use the Pluralizer, Str::plural and Str::singular (^1.3).",
+        "php-di/invoker": "Required to use the Invoker Class (^1.3).",
+        "symfony/var-dumper": "Improves the Dumper::dump function (^4.0.6).",
+        "viserio/options-resolver": "Required to use the AbstractConnectionManager and AbstractManager Class (self.version)."
     },
     "extra": {
         "branch-alias": {
-            "dev-master"                           : "1.0-dev"
+            "dev-master": "1.0-dev"
         }
     },
-    "minimum-stability"                            : "dev",
-    "prefer-stable"                                : true
+    "autoload": {
+        "psr-4": {
+            "Viserio\\Component\\Support\\": ""
+        },
+        "files": [
+            "helpers.php"
+        ],
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Viserio\\Component\\Support\\Tests\\": "Tests/"
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "support": {
+        "issues": "https://github.com/narrowspark/framework/issues",
+        "source": "https://github.com/narrowspark/framework"
+    }
 }
