--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     ],
     "require": {
         "php": "^7.2",
-        "ext-mbstring": "*",
         "spatie/macroable": "^1.0",
+        "symfony/polyfill-mbstring": "^1.8.0",
         "viserio/contract": "self.version"
     },
     "provide": {
