--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require": {
         "php": "^7.2",
         "spatie/macroable": "^1.0",
+        "symfony/polyfill-ctype": "^1.8.0",
         "symfony/polyfill-mbstring": "^1.8.0",
         "viserio/contract": "self.version"
     },
@@ -36,6 +37,7 @@
         "doctrine/inflector": "^1.3",
         "mikey179/vfsStream": "^1.6",
         "mockery/mockery": "^1.0",
+        "narrowspark/pretty-array": "^1.0",
         "narrowspark/testing-helper": "^6.0",
         "php-di/invoker": "^2.0",
         "phpunit/phpunit": "^7.0",
@@ -47,6 +49,7 @@
         "danielstjules/stringy": "Required to use the full power of Str (^3.0).",
         "doctrine/inflector": "Required to use the Pluralizer, Str::plural and Str::singular (^1.3).",
         "php-di/invoker": "Required to use the Invoker Class (^1.3).",
+        "narrowspark/pretty-array": "Required to use the VarExporter (^1.0).",
         "symfony/var-dumper": "Improves the Dumper::dump function (^4.0.6).",
         "viserio/options-resolver": "Required to use the AbstractConnectionManager and AbstractManager Class (self.version)."
     },
