--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,6 @@
         "doctrine/inflector": "^1.3",
         "mikey179/vfsStream": "^1.6",
         "mockery/mockery": "^1.0",
-        "narrowspark/pretty-array": "^1.0",
         "narrowspark/testing-helper": "^7.0.0",
         "php-di/invoker": "^2.0",
         "phpunit/phpunit": "^7.2.0",
@@ -47,9 +46,8 @@
     "suggest": {
         "danielstjules/stringy": "Required to use the full power of Str (^3.0).",
         "doctrine/inflector": "Required to use the Pluralizer, Str::plural and Str::singular (^1.3).",
-        "narrowspark/pretty-array": "Required to use the VarExporter (^1.0).",
         "php-di/invoker": "Required to use the Invoker Class (^1.3).",
-        "symfony/var-dumper": "Improves the Dumper::dump function (^4.1.3).",
+        "symfony/var-dumper": "Improves the Dumper::dump function (^4.1.0).",
         "viserio/options-resolver": "Required to use the AbstractConnectionManager and AbstractManager Class (self.version)."
     },
     "extra": {
@@ -62,7 +60,7 @@
             "Viserio\\Component\\Support\\": ""
         },
         "files": [
-            "helpers.php"
+            "helper.php"
         ],
         "exclude-from-classmap": [
             "/Tests/"
