--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "dumper",
         "invoker"
     ],
-    "homepage": "http://github.com/narrowspark/framework",
+    "homepage": "https://github.com/narrowspark/framework",
     "license": "MIT",
     "authors": [
         {
